K8S/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: chat-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      name: frontend-pod
      namespace: chat-app
      labels:
        app: frontend

    spec:
      containers:
        - name: chatapp-frontend
          image: afsarsohail/chatapp-frontend:latests
          ports:
            - containerPort: 80
